// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Parses a m3u file > Fully parses to a JS object 1`] = `
{
  "channels": [
    {
      "duration": -1,
      "groupTitle": "News",
      "name": "Channel 1",
      "tvgId": "Channel1",
      "tvgLanguage": "English",
      "tvgName": "Channel 1",
      "url": "http://server:port/channel1",
      "urls": [
        "http://server:port/channel1",
      ],
    },
    {
      "duration": -1,
      "name": "Channel 2",
      "tvgId": "Channel2",
      "tvgLanguage": "English",
      "tvgLogo": "http://website.com/channel2logo.png",
      "tvgName": "Channel 2",
      "url": "http://server:port/channel2",
      "urls": [
        "http://server:port/channel2",
      ],
    },
    {
      "duration": -1,
      "groupTitle": "Movies",
      "name": "Channel 3",
      "tvgId": "Channel3",
      "tvgLanguage": "English",
      "tvgName": "Channel 3",
      "url": "http://server:port/channel3",
      "urls": [
        "http://server:port/channel3",
      ],
    },
    {
      "duration": -1,
      "groupTitle": "Sports",
      "name": "Channel 4",
      "tvgId": "Channel4",
      "tvgLanguage": "English",
      "tvgLogo": "http://website.com/channel4logo.png",
      "tvgName": "Channel 4",
      "url": "http://server:port/channel4",
      "urls": [
        "http://server:port/channel4",
      ],
    },
    {
      "duration": 300,
      "groupTitle": "Entertainment",
      "name": "Channel 5",
      "tvgId": "Channel5",
      "tvgName": "Channel 5",
      "url": "http://server:port/channel5",
      "urls": [
        "http://server:port/channel5",
      ],
    },
    {
      "duration": -1,
      "groupTitle": "Music",
      "name": "Channel 6",
      "tvgId": "Channel6",
      "tvgLanguage": "English",
      "tvgLogo": "http://website.com/channel6logo.png",
      "tvgName": "Channel 6",
      "url": "http://server:port/channel6",
      "urls": [
        "http://server:port/channel6",
      ],
    },
    {
      "duration": -1,
      "name": "Channel 7",
      "tvgId": "Channel7",
      "tvgLanguage": "English",
      "tvgLogo": "http://website.com/channel7logo.png",
      "tvgName": "Channel 7",
      "url": "http://server:port/channel7",
      "urls": [
        "http://server:port/channel7",
      ],
    },
    {
      "duration": -1,
      "groupTitle": "News",
      "name": "Channel 8",
      "tvgId": "Channel8",
      "tvgLanguage": "English",
      "tvgLogo": "http://website.com/channel8logo.png",
      "tvgName": "Channel 8",
      "url": "http://server:port/channel8",
      "urls": [
        "http://server:port/channel8",
      ],
    },
    {
      "duration": -1,
      "groupTitle": "Movies",
      "name": "Channel 9",
      "tvgId": "Channel9",
      "tvgLanguage": "English",
      "tvgLogo": "http://website.com/channel9logo.png",
      "tvgName": "Channel 9",
      "url": "http://server:port/channel9",
      "urls": [
        "http://server:port/channel9",
      ],
    },
    {
      "duration": -1,
      "groupTitle": "Sports",
      "name": "Channel 10",
      "tvgId": "Channel10",
      "tvgLanguage": "English",
      "tvgName": "Channel 10",
      "url": "http://server:port/channel10",
      "urls": [
        "http://server:port/channel10",
      ],
    },
    {
      "duration": -1,
      "name": "Channel 11",
      "tvgId": "Channel11",
      "tvgLanguage": "English",
      "tvgLogo": "http://website.com/channel11logo.png",
      "tvgName": "Channel 11",
      "url": "http://server:port/channel11",
      "urls": [
        "http://server:port/channel11",
      ],
    },
    {
      "duration": -1,
      "groupTitle": "Entertainment",
      "name": "Channel 12",
      "tvgId": "Channel12",
      "tvgLanguage": "English",
      "tvgLogo": "http://website.com/channel12logo.png",
      "tvgName": "Channel 12",
      "url": "http://server:port/channel12",
      "urls": [
        "http://server:port/channel12",
      ],
    },
    {
      "duration": -1,
      "groupTitle": "Music",
      "name": "Channel 13",
      "tvgId": "Channel13",
      "tvgLanguage": "English",
      "tvgName": "Channel 13",
      "url": "http://server:port/channel13",
      "urls": [
        "http://server:port/channel13",
      ],
    },
    {
      "duration": -1,
      "groupTitle": "News",
      "name": "Channel 14",
      "tvgId": "Channel14",
      "tvgName": "Channel 14",
      "url": "http://server:port/channel14",
      "urls": [
        "http://server:port/channel14",
      ],
    },
    {
      "duration": -1,
      "groupTitle": "Movies",
      "name": "Channel 15",
      "tvgId": "Channel15",
      "tvgLanguage": "English",
      "tvgLogo": "http://website.com/channel15logo.png",
      "tvgName": "Channel 15",
      "url": "http://server:port/channel15",
      "urls": [
        "http://server:port/channel15",
      ],
    },
    {
      "duration": -1,
      "groupTitle": "Sports",
      "name": "Channel 16",
      "tvgId": "Channel16",
      "tvgLanguage": "English",
      "tvgName": "Channel 16",
      "url": "http://server:port/channel16",
      "urls": [
        "http://server:port/channel16",
      ],
    },
    {
      "duration": -1,
      "groupTitle": "Entertainment",
      "name": "Channel 17",
      "tvgId": "Channel17",
      "tvgLanguage": "English",
      "tvgLogo": "http://website.com/channel17logo.png",
      "tvgName": "Channel 17",
      "url": "http://server:port/channel17",
      "urls": [
        "http://server:port/channel17",
      ],
    },
    {
      "duration": -1,
      "groupTitle": "Music",
      "name": "Channel 18",
      "tvgId": "Channel18",
      "tvgName": "Channel 18",
      "url": "http://server:port/channel18",
      "urls": [
        "http://server:port/channel18",
      ],
    },
    {
      "duration": -1,
      "name": "Channel 19",
      "tvgId": "Channel19",
      "tvgLanguage": "English",
      "tvgLogo": "http://website.com/channel19logo.png",
      "tvgName": "Channel 19",
      "url": "http://server:port/channel19",
      "urls": [
        "http://server:port/channel19",
      ],
    },
    {
      "duration": -1,
      "groupTitle": "News",
      "name": "Channel 20",
      "tvgId": "Channel20",
      "tvgLanguage": "English",
      "tvgLogo": "http://website.com/channel20logo.png",
      "tvgName": "Channel 20",
      "url": "http://server:port/channel20",
      "urls": [
        "http://server:port/channel20",
      ],
    },
    {
      "duration": -1,
      "groupTitle": "Movies",
      "name": "Channel 21",
      "tvgId": "Channel21",
      "tvgLanguage": "English",
      "tvgLogo": "http://website.com/channel21logo.png",
      "tvgName": "Channel 21",
      "url": "http://server:port/channel21",
      "urls": [
        "http://server:port/channel21",
      ],
    },
    {
      "duration": -1,
      "groupTitle": "Sports",
      "name": "Channel 22",
      "tvgId": "Channel22",
      "tvgName": "Channel 22",
      "url": "http://server:port/channel22",
      "urls": [
        "http://server:port/channel22",
      ],
    },
    {
      "duration": -1,
      "groupTitle": "Entertainment",
      "name": "Channel 23",
      "tvgId": "Channel23",
      "tvgLanguage": "English",
      "tvgName": "Channel 23",
      "url": "http://server:port/channel23",
      "urls": [
        "http://server:port/channel23",
      ],
    },
    {
      "duration": -1,
      "groupTitle": "Music",
      "name": "Channel 24",
      "tvgId": "Channel24",
      "tvgLanguage": "English",
      "tvgLogo": "http://website.com/channel24logo.png",
      "tvgName": "Channel 24",
      "url": "http://server:port/channel24",
      "urls": [
        "http://server:port/channel24",
      ],
    },
    {
      "duration": -1,
      "name": "Channel 25",
      "tvgId": "Channel25",
      "tvgLanguage": "English",
      "tvgLogo": "http://website.com/channel25logo.png",
      "tvgName": "Channel 25",
      "url": "http://server:port/channel25",
      "urls": [
        "http://server:port/channel25",
      ],
    },
    {
      "duration": -1,
      "groupTitle": "News",
      "name": "Channel 26",
      "tvgId": "Channel26",
      "tvgLanguage": "English",
      "tvgLogo": "http://website.com/channel26logo.png",
      "tvgName": "Channel 26",
      "url": "http://server:port/channel26",
      "urls": [
        "http://server:port/channel26",
      ],
    },
    {
      "duration": -1,
      "groupTitle": "Movies",
      "name": "Channel 27",
      "tvgId": "Channel27",
      "tvgLanguage": "English",
      "tvgLogo": "http://website.com/channel27logo.png",
      "tvgName": "Channel 27",
      "url": "http://server:port/channel27",
      "urls": [
        "http://server:port/channel27",
      ],
    },
    {
      "duration": -1,
      "groupTitle": "Sports",
      "name": "Channel 28",
      "tvgId": "Channel28",
      "tvgName": "Channel 28",
      "url": "http://server:port/channel28",
      "urls": [
        "http://server:port/channel28",
      ],
    },
    {
      "duration": -1,
      "groupTitle": "Entertainment",
      "name": "Channel 29",
      "tvgId": "Channel29",
      "tvgLanguage": "English",
      "tvgName": "Channel 29",
      "url": "http://server:port/channel29",
      "urls": [
        "http://server:port/channel29",
      ],
    },
    {
      "duration": -1,
      "groupTitle": "Music",
      "name": "Channel 30",
      "tvgId": "Channel30",
      "tvgLanguage": "English",
      "tvgLogo": "http://website.com/channel30logo.png",
      "tvgName": "Channel 30",
      "url": "http://server:port/channel30",
      "urls": [
        "http://server:port/channel30",
      ],
    },
    {
      "duration": -1,
      "name": "Channel 31",
      "tvgId": "Channel31",
      "tvgLanguage": "English",
      "tvgLogo": "http://website.com/channel31logo.png",
      "tvgName": "Channel 31",
      "url": "http://server:port/channel31",
      "urls": [
        "http://server:port/channel31",
      ],
    },
    {
      "duration": -1,
      "groupTitle": "News",
      "name": "Channel 32",
      "tvgId": "Channel32",
      "tvgLanguage": "English",
      "tvgLogo": "http://website.com/channel32logo.png",
      "tvgName": "Channel 32",
      "url": "http://server:port/channel32",
      "urls": [
        "http://server:port/channel32",
      ],
    },
    {
      "duration": -1,
      "groupTitle": "Movies",
      "name": "Channel 33",
      "tvgId": "Channel33",
      "tvgLanguage": "English",
      "tvgLogo": "http://website.com/channel33logo.png",
      "tvgName": "Channel 33",
      "url": "http://server:port/channel33",
      "urls": [
        "http://server:port/channel33",
      ],
    },
    {
      "duration": -1,
      "groupTitle": "Sports",
      "name": "Channel 34",
      "tvgId": "Channel34",
      "tvgName": "Channel 34",
      "url": "http://server:port/channel34",
      "urls": [
        "http://server:port/channel34",
      ],
    },
    {
      "duration": -1,
      "groupTitle": "Entertainment",
      "name": "Channel 35",
      "tvgId": "Channel35",
      "tvgLanguage": "English",
      "tvgName": "Channel 35",
      "url": "http://server:port/channel35",
      "urls": [
        "http://server:port/channel35",
      ],
    },
    {
      "duration": -1,
      "groupTitle": "Music",
      "name": "Channel 36",
      "tvgId": "Channel36",
      "tvgLanguage": "English",
      "tvgLogo": "http://website.com/channel36logo.png",
      "tvgName": "Channel 36",
      "url": "http://server:port/channel36",
      "urls": [
        "http://server:port/channel36",
      ],
    },
    {
      "duration": -1,
      "name": "Channel 37",
      "tvgId": "Channel37",
      "tvgLanguage": "English",
      "tvgLogo": "http://website.com/channel37logo.png",
      "tvgName": "Channel 37",
      "url": "http://server:port/channel37",
      "urls": [
        "http://server:port/channel37",
      ],
    },
    {
      "duration": -1,
      "groupTitle": "News",
      "name": "Channel 38",
      "tvgId": "Channel38",
      "tvgLanguage": "English",
      "tvgLogo": "http://website.com/channel38logo.png",
      "tvgName": "Channel 38",
      "url": "http://server:port/channel38",
      "urls": [
        "http://server:port/channel38",
      ],
    },
    {
      "duration": -1,
      "groupTitle": "Movies",
      "name": "Channel 39",
      "tvgId": "Channel39",
      "tvgLanguage": "English",
      "tvgLogo": "http://website.com/channel39logo.png",
      "tvgName": "Channel 39",
      "url": "http://server:port/channel39",
      "urls": [
        "http://server:port/channel39",
      ],
    },
    {
      "duration": -1,
      "groupTitle": "Sports",
      "name": "Channel 40",
      "tvgId": "Channel40",
      "tvgName": "Channel 40",
      "url": "http://server:port/channel40",
      "urls": [
        "http://server:port/channel40",
      ],
    },
    {
      "duration": -1,
      "groupTitle": "Entertainment",
      "name": "Channel 41",
      "tvgId": "Channel41",
      "tvgLanguage": "English",
      "tvgName": "Channel 41",
      "url": "http://server:port/channel41",
      "urls": [
        "http://server:port/channel41",
      ],
    },
    {
      "duration": -1,
      "groupTitle": "Music",
      "name": "Channel 42",
      "tvgId": "Channel42",
      "tvgLanguage": "English",
      "tvgLogo": "http://website.com/channel42logo.png",
      "tvgName": "Channel 42",
      "url": "http://server:port/channel42",
      "urls": [
        "http://server:port/channel42",
      ],
    },
    {
      "duration": -1,
      "name": "Channel 43",
      "tvgId": "Channel43",
      "tvgLanguage": "English",
      "tvgLogo": "http://website.com/channel43logo.png",
      "tvgName": "Channel 43",
      "url": "http://server:port/channel43",
      "urls": [
        "http://server:port/channel43",
      ],
    },
    {
      "duration": -1,
      "groupTitle": "News",
      "name": "Channel 44",
      "tvgId": "Channel44",
      "tvgLanguage": "English",
      "tvgLogo": "http://website.com/channel44logo.png",
      "tvgName": "Channel 44",
      "url": "http://server:port/channel44",
      "urls": [
        "http://server:port/channel44",
      ],
    },
    {
      "duration": -1,
      "groupTitle": "Movies",
      "name": "Channel 45",
      "tvgId": "Channel45",
      "tvgLanguage": "English",
      "tvgLogo": "http://website.com/channel45logo.png",
      "tvgName": "Channel 45",
      "url": "http://server:port/channel45",
      "urls": [
        "http://server:port/channel45",
      ],
    },
    {
      "duration": -1,
      "groupTitle": "Sports",
      "name": "Channel 46",
      "tvgId": "Channel46",
      "tvgName": "Channel 46",
      "url": "http://server:port/channel46",
      "urls": [
        "http://server:port/channel46",
      ],
    },
    {
      "duration": -1,
      "groupTitle": "Entertainment",
      "name": "Channel 47",
      "tvgId": "Channel47",
      "tvgLanguage": "English",
      "tvgName": "Channel 47",
      "url": "http://server:port/channel47",
      "urls": [
        "http://server:port/channel47",
      ],
    },
    {
      "duration": -1,
      "groupTitle": "Music",
      "name": "Channel 48",
      "tvgId": "Channel48",
      "tvgLanguage": "English",
      "tvgLogo": "http://website.com/channel48logo.png",
      "tvgName": "Channel 48",
      "url": "http://server:port/channel48",
      "urls": [
        "http://server:port/channel48",
      ],
    },
    {
      "duration": -1,
      "name": "Channel 49",
      "tvgId": "Channel49",
      "tvgLanguage": "English",
      "tvgLogo": "http://website.com/channel49logo.png",
      "tvgName": "Channel 49",
      "url": "http://server:port/channel49",
      "urls": [
        "http://server:port/channel49",
      ],
    },
    {
      "duration": -1,
      "groupTitle": "News",
      "name": "Channel 50",
      "tvgId": "Channel50",
      "tvgLanguage": "English",
      "tvgLogo": "http://website.com/channel50logo.png",
      "tvgName": "Channel 50",
      "url": "http://server:port/channel50",
      "urls": [
        "http://server:port/channel50",
      ],
    },
  ],
  "headers": {
    "xTvgUrl": "http://195.154.221.171/epg/guidealbania.xml.gz",
  },
}
`;

exports[`Write a m3u file > Write a m3u file 1`] = `
"#EXTM3U
#EXTINF:-1 tvg-id="Channel1" tvg-name="Channel 1" group-title="News",Channel 1
http://server:port/channel1
#EXTINF:-1 tvg-id="Channel2" tvg-name="Channel 2",Channel 2
http://server:port/channel2"
`;

exports[`Write a m3u file > Write a m3u file every attribute 1`] = `
"#EXTM3U x-tvg-url="http://example.com"
#EXTINF:-1 tvg-id="channel1.uk" tvg-name="Channel 1" tvg-language="English" tvg-logo="http://example.com/logo.png" tvg-rec="default" tvg-chno="1" group-title="News" tvg-url="http://example.com" timeshift="1" catchup="default" catchup-days="7" catchup-source="http://example.com" some-other-key="hello",Channel 1
http://server:port/channel1"
`;

exports[`Write a m3u file > Write a m3u file items with no name 1`] = `
"#EXTM3U
#EXTINF:-1,
http://server:port/channel1"
`;

exports[`Write a m3u file > Write a m3u file items with no url 1`] = `
"#EXTM3U
#EXTINF:-1,Channel 2
http://server:port/channel2"
`;

exports[`Write a m3u file > Write a m3u file with headers 1`] = `
"#EXTM3U x-tvg-url="http://example.com"
#EXTINF:-1 tvg-id="Channel1" tvg-name="Channel 1" group-title="News" some-other-key="hello",Channel 1
http://server:port/channel1"
`;
